src/main/default/objects/Sync_Configuration__c/Sync_Configuration__c.object-meta.xml
<CustomObject>
    <description>This controls which data the mobile client users will receive when they sync.  Users will only get information related to the offices listed here.</description>
    <label>Sync Configuration</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sync Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sync Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>