src/main/default/objects/Sync_Configuration__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Controls the jobs that the user sees in FieldFX Mobile by customer. If a customer is specified, the user only sees jobs with price books linked to that customer. If a customer is not specified, the user sees jobs for all accessible accounts.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Configurations (Account)</relationshipLabel>
    <relationshipName>Sync_Configurations1</relationshipName>
    <type>Lookup</type>
</CustomField>