src/main/default/objects/Sync_Configuration__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <inlineHelpText>Contact record for the user granted access to jobs in FieldFX Mobile through the sync configuration.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sync Configurations</relationshipLabel>
    <relationshipName>Sync_Configurations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>