src/main/default/objects/Sync_Configuration__c/fields/Job_Type__c.field-meta.xml
<CustomField>
    <fullName>Job_Type__c</fullName>
    <inlineHelpText>Controls the jobs that the user sees in FieldFX Mobile by job type. If a job type is specified, the user only sees jobs for that job type. If a job type is not specified, the user sees jobs for all job types.</inlineHelpText>
    <label>Job Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Time &amp; Material</fullName>
            </value>
            <value>
                <fullName>Fixed Bid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>