src/main/default/objects/Sync_Configuration__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Controls the jobs that the user sees in FieldFX Mobile by office. If an office is specified, the user only sees jobs for that office. If an office is not specified, the user sees jobs for all offices.</inlineHelpText>
    <label>Office</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sync Configurations</relationshipLabel>
    <relationshipName>Sync_Configurations</relationshipName>
    <type>Lookup</type>
</CustomField>