src/main/default/objects/Sync_Configuration__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <inlineHelpText>Controls the jobs that the user sees in FieldFX Mobile by business segment. If a segment is specified, the user only sees jobs for that segment. If a segment is not specified, the user sees jobs for all segments.</inlineHelpText>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service Segment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>