src/main/default/objects/Sync_Configuration__c/fields/Sync_JobCrewOnly__c.field-meta.xml
<CustomField>
    <fullName>Sync_JobCrewOnly__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Flag Job for download only for Job Crew</description>
    <inlineHelpText>Controls the jobs that the user sees in FieldFX Mobile by job crew assignment. If selected, the user only sees jobs if they are in the job crew. If not selected, the user sees any job matching the other criteria specified in the sync configuration.</inlineHelpText>
    <label>Sync - Job Crew Only</label>
    <type>Checkbox</type>
</CustomField>