src/main/default/objects/Sync_Configuration__c/fields/UniqueExternalId__c.field-meta.xml
<CustomField>
    <fullName>UniqueExternalId__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Unique identifier for the sync configuration.</inlineHelpText>
    <label>UniqueExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>