src/main/default/objects/Sync_Configuration__c/fields/User_Login_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Login_Name__c</fullName>
    <formula>Contact__r.User__r.Username</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>User name for the user granted access to jobs in FieldFX Mobile through the sync configuration.</inlineHelpText>
    <label>User Login Name</label>
    <type>Text</type>
</CustomField>