src/main/default/objects/Sync_Configuration__c/validationRules/ContactWithValidUserLogin.validationRule-meta.xml
<ValidationRule>
    <fullName>ContactWithValidUserLogin</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Contact__r.User__c)</errorConditionFormula>
    <errorDisplayField>Contact__c</errorDisplayField>
    <errorMessage>Contact must have a valid User login</errorMessage>
</ValidationRule>