src/main/default/objects/Sync_Configuration__c/listViews/AllItems_WithUserLogin.listView-meta.xml
<ListView>
    <fullName>AllItems_WithUserLogin</fullName>
    <columns>User_Login_Name__c</columns>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Sync_JobCrewOnly__c</columns>
    <columns>Account__c</columns>
    <columns>Job_Type__c</columns>
    <columns>Office__c</columns>
    <columns>Segment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Items</label>
</ListView>